baml_language/crates/baml_tests/snapshots/compiles/lambda_fat_arrow/baml_tests__compiles__lambda_fat_arrow__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.test_annotated() -> int throws never {
  { : int
    let double = : (x: int) -> int throws never
      (x: int) -> int { ... } : (x: int) -> int throws never
        {
          x * 2
        }
    double(21) : int
  }
}
lambda user.test_annotated {
}
function user.test_zero_param() -> int throws never {
  { : int
    let constant = : () -> int throws never
      () -> int { ... } : () -> int throws never
        {
          42
        }
    constant() : int
  }
}
lambda user.test_zero_param {
}
function user.test_inferred() -> int throws never {
  { : int
    let double = : (x: int) -> int throws never
      (x: int) -> { ... } : (x: int) -> int throws never
        {
          x * 2
        }
    double(21) : int
  }
}
lambda user.test_inferred {
}
function user.test_multi_param() -> int throws never {
  { : int
    let add = : (a: int, b: int) -> int throws never
      (a: int, b: int) -> int { ... } : (a: int, b: int) -> int throws never
        {
          a + b
        }
    add(20, 22) : int
  }
}
lambda user.test_multi_param {
}
function user.test_in_match(x: int) -> int throws never {
  { : int | 0
    match (x : int) : int | 0
      0 =>
        { : int
          let inc = : (y: int) -> int throws never
            (y: int) -> int { ... } : (y: int) -> int throws never
              {
                y + 1
              }
          inc(10) : int
        }
      _ =>
        0 : 0
  }
}
lambda user.test_in_match {
}
function user.test_mixed() -> int throws never {
  { : int
    let a = : (x: int) -> int throws never
      (x: int) -> int { ... } : (x: int) -> int throws never
        {
          x + 1
        }
    let b = : (x: int) -> int throws never
      (x: int) -> int { ... } : (x: int) -> int throws never
        {
          x + 2
        }
    a(0) + b(0) : int
  }
}
lambda user.test_mixed {
}
lambda user.test_mixed {
}
function user.test_top_level_fat_arrow(x: int) -> int throws never {
  { : int
    x + 1 : int
  }
}
