baml_language/crates/baml_tests/snapshots/compiles/lambda_fat_arrow/baml_tests__compiles__lambda_fat_arrow__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 10052
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
