baml_language/crates/baml_tests/snapshots/compiles/lambda_fat_arrow/baml_tests__compiles__lambda_fat_arrow__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.test_annotated() -> int {
    load_const 21
    load_const ?
    make_closure .<lambda(test_annotated, 0)>
    call_indirect
    return
}

function user.test_generic() -> int {
    load_const 42
    load_const ?
    make_closure .<lambda(test_generic, 0)>
    call_indirect
    return
}

function user.test_in_match(x: int) -> int {
    load_var x
    load_const 0
    cmp_int_op ==
    pop_jump_if_false L0
    jump L1

  L0:
    load_const 0
    jump L2

  L1:
    load_const 10
    load_const ?
    make_closure .<lambda(test_in_match, 0)>
    call_indirect

  L2:
    return
}

function user.test_inferred() -> int {
    load_const 21
    load_const ?
    make_closure .<lambda(test_inferred, 0)>
    call_indirect
    return
}

function user.test_mixed() -> int {
    load_const 0
    load_const ?
    make_closure .<lambda(test_mixed, 0)>
    call_indirect
    store_var _3
    load_const 0
    load_const ?
    make_closure .<lambda(test_mixed, 1)>
    call_indirect
    store_var _5
    load_var _3
    load_var _5
    bin_op +
    return
}

function user.test_multi_param() -> int {
    load_const 20
    load_const 22
    load_const ?
    make_closure .<lambda(test_multi_param, 0)>
    call_indirect
    return
}

function user.test_zero_param() -> int {
    load_const ?
    make_closure .<lambda(test_zero_param, 0)>
    call_indirect
    return
}
